# aoc-2020

./: .gitignore  Makefile  pyproject.toml
day/1/: main.py
day/2/: main.py
day/eight/: main.py  test_main.py
day/five/: main.py  test_main.py
day/four/: main.py  test_main.py
day/nine/: main.py  test_main.py
day/one/: main.py  test_main.py
day/seven/: main.py  test_main.py
day/six/: main.py  test_main.py
day/ten/: main.py  test_main.py
day/three/: main.py  test_main.py
day/two/: main.py  test_main.py
