[tool.poetry]
name = "aoc-2020"
version = "0.1.0"
description = ""
authors = ["stupoid <kelvin.koh@hennge.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
